# yeelight-studio

./: .gitignore  Cargo.toml  Makefile  README.md
crates/yeelight-core/: Cargo.toml
crates/yeelight-core/examples/: control.rs  discover.rs  log_to_screen.rs  music.rs  test_ambient_red.rs  test_saved.rs
crates/yeelight-core/src/: client.rs  commands.rs  device.rs  discovery.rs  error.rs  firewall.rs  lib.rs  message.rs  music.rs  registry.rs
crates/yeelight-gui/: Cargo.toml
crates/yeelight-gui/src/: app.rs  main.rs  message.rs  presets.rs  settings.rs  theme.rs
crates/yeelight-gui/src/ambient/: capture.rs  color.rs  mod.rs
crates/yeelight-gui/src/audio/: capture.rs  dsp.rs  mod.rs
crates/yeelight-gui/src/view/: components.rs  device.rs  dial.rs  logging.rs  mod.rs  rail.rs  settings.rs  sidebar.rs  wave.rs
crates/yeelight-gui/src/view/detail/: ambient.rs  audio.rs  color.rs  flow.rs  light.rs  mod.rs  music.rs  scenes.rs  timer.rs  white.rs
crates/yeelight-mock/: Cargo.toml
crates/yeelight-mock/src/: main.rs
docs/: ambient-cpu-optimization.md  ui-theme-guideline.md  yeelight-spec.md
