[package]
name = "yeelight-core"
description = "Yeelight WiFi LED discovery and local control over the LAN."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "time", "sync", "rt", "macros", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
socket2 = { version = "0.5", features = ["all"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util", "process"] }
tracing-subscriber = "0.3"
