[package]
name = "yeelight-gui"
description = "Desktop GUI for discovering and controlling Yeelight WiFi LEDs."
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
yeelight-core = { path = "../yeelight-core" }
iced = { version = "0.14", features = ["tokio"] }
iced_aw = { version = "0.14", default-features = false, features = ["color_picker"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dark-light = "2"
rfd = "0.15"
dirs = "6"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux/Wayland captures via the `grim` CLI (wlr-screencopy) — scap's pipewire-portal
# engine dies instantly on wlroots compositors (proven: 0 frames, closed channel). Other
# platforms keep scap (ScreenCaptureKit / DXGI), which works there.
[target.'cfg(not(target_os = "linux"))'.dependencies]
scap = { package = "scap-rs", version = "0.1.0" }
